--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^1.8.1",
-    "electron-prebuilt": "^1.4.13"
-  },
-  "dependencies": {
+    "electron": "^1.8.2-beta.4",
+    "electron-reload": "^1.2.2",
     "electron-packager": "^8.4.0"
-  }
+  },
+  "dependencies": {}
 }
